tests/compile-fail/suzu_from_generic_type_param.stderr
error: `from` cannot be used on fields with generic type parameters; implement `From` manually instead
 --> tests/compile-fail/suzu_from_generic_type_param.rs:6:12
  |
6 |     #[suzu(from)]
  |            ^^^^
